--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Broswer storage and Local storage</h1>
 
+    <button onclick="handleAddToStorage()">Add Local Storage</button>
+
 
 
     <script src="storage.js"></script>
